platform/applications/demo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: demo-web
  ports:
    - name: http
      port: 80
      targetPort: http
